Fixed #717 - Added missing card button alignment style

--- a/static/css/payment/form-1.css
+++ b/static/css/payment/form-1.css
@@ -148,6 +148,12 @@
   overflow: hidden;
 }
 
+.stripe-button-lock,
+.stripe-button-text
+{
+  vertical-align: middle;
+}
+
 .stripe-button-lock
 {
   height: 16px;
